--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+
+
+
     <application
         android:name=".WeatherApp"
         android:allowBackup="true"
@@ -15,6 +23,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WeatherApp"
         tools:targetApi="31">
+
+
+        <receiver android:name=".notificationBuilder.WeatherAlarmReceiver" />
+
+        <service
+            android:name=".services.ForegroundWeatherService"
+            android:foregroundServiceType="location|dataSync"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
